sv_spectate: add less harsh mode "2", improve notifications
More friendly than mode "0": direct spectating is disabled during the
match but observing is still allowed so nobody gets kicked.

Updates two existing sv_spectate notifications to use MULTI macros.

--- a/notifications.cfg
+++ b/notifications.cfg
@@ -283,6 +283,8 @@ seta notification_INFO_ROUND_PLAYER_WIN "1" "\"0\" = off, \"1\" = print to conso
 seta notification_INFO_ROUND_TEAM_WIN "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_ROUND_TIED "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_SCORES "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_SPECTATE_NOTALLOWED "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_SPECTATE_SPEC_NOTALLOWED "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_SPECTATE_WARNING "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_SUPERSPEC_MISSING_UID "2" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_SUPERWEAPON_PICKUP "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -552,6 +554,7 @@ seta notification_CENTER_SEQUENCE_COMPLETED "1" "\"0\" = off, \"1\" = centerprin
 seta notification_CENTER_SEQUENCE_COUNTER "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_SEQUENCE_COUNTER_FEWMORE "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_SPECTATE_NOTALLOWED "1" "\"0\" = off, \"1\" = centerprint"
+seta notification_CENTER_SPECTATE_SPEC_NOTALLOWED "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_SPECTATE_WARNING "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_SUPERWEAPON_BROKEN "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_SUPERWEAPON_LOST "1" "\"0\" = off, \"1\" = centerprint"
@@ -676,6 +679,9 @@ seta notification_ITEM_WEAPON_PRIMORSEC "1" "enable this multiple notification"
 seta notification_ITEM_WEAPON_UNAVAILABLE "1" "enable this multiple notification"
 seta notification_MULTI_COINTOSS "1" "enable this multiple notification"
 seta notification_MULTI_INSTAGIB_FINDAMMO "1" "enable this multiple notification"
+seta notification_SPECTATE_NOTALLOWED "1" "enable this multiple notification"
+seta notification_SPECTATE_SPEC_NOTALLOWED "1" "enable this multiple notification"
+seta notification_SPECTATE_WARNING "1" "enable this multiple notification"
 seta notification_WEAPON_ACCORDEON_MURDER "1" "enable this multiple notification"
 seta notification_WEAPON_ACCORDEON_SUICIDE "1" "enable this multiple notification"
 seta notification_WEAPON_ARC_MURDER "1" "enable this multiple notification"
