vote master: support player ID (pubkey) authentication

--- a/commands.cfg
+++ b/commands.cfg
@@ -386,6 +386,7 @@ set sv_vote_limit 160 "maximum allowed length of a vote command"
 set sv_vote_master_commands "movetored movetoblue movetoyellow movetopink movetospec" "extra commands which vote masters can execute by themselves, along with the normal sv_vote_commands" // maybe add kickban here (but then sv_vote_master 0)
 set sv_vote_master 0	"allows the use of the vote master system"
 set sv_vote_master_callable 0 "when set, users can use \"vmaster\" to call a vote to become master of voting commands"
+set sv_vote_master_ids "" "space-separated list of player IDs (signed public key fingerprints) which will be logged in as master automatically"
 set sv_vote_master_password "" "when set, users can use \"vlogin PASSWORD\" to log in as master, then run master commands directly using vdo"
 set sv_vote_master_playerlimit 2 "minimum number of players needed for a player to be allowed to vote for master"
 set sv_vote_no_stops_vote 1 "allow the vote caller to stop their own vote simply by voting no"
