--- a/mutators.cfg
+++ b/mutators.cfg
@@ -9,7 +9,7 @@
 set g_dodging 0 "enable dodging (quick acceleration in a given direction)"
 
 seta cl_dodging_timeout 0.2 "determines how long apart (in seconds) two taps on the same direction key are considered a dodge; \"0\" = disable"
-seta cl_dodging 0 "enable dodging (REQUIRES: sv_dodging_clientselect to be enabled on the server)"
+seta cl_dodging 1 "enable dodging (REQUIRES: sv_dodging_clientselect to be enabled on the server)"
 
 set sv_dodging_air_dodging 0
 set sv_dodging_wall_dodging 0 "allow dodging off walls"
@@ -28,7 +28,7 @@ set sv_dodging_frozen 0 "allow dodging while frozen (REQUIRES: g_dodging to be e
 set sv_dodging_frozen_doubletap 0
 set sv_dodging_maxspeed 450 "maximum speed a player can be moving at to use the standard dodging from an (almost) standstill"
 set sv_dodging_air_maxspeed 450 "maximum speed a player can be moving at before they dodge again when air dodging is enabled"
-set sv_dodging_clientselect 0 "allow clients to opt-in to dodging movement with the cl_dodging cvar, dodging will be off for clients by default with this enabled"
+set sv_dodging_clientselect 0 "allow clients to enable or disable dodging movement with the cl_dodging cvar"
 
 
 // ===========
