Move g_projectiles_*, g_balance_contents_* documentation to cvar descriptions
Includes changes made by tools/cvar-standardize.sh

--- a/balance-xonotic.cfg
+++ b/balance-xonotic.cfg
@@ -204,45 +204,26 @@ set g_balance_firetransfer_time 0.9
 set g_balance_firetransfer_damage 0.8
 set g_throughfloor_damage 0.75
 set g_throughfloor_force 0.75
-set g_projectiles_damage -2
-// possible values:
-// -2: absolutely no damage to projectiles (no exceptions)
-// -1: no damage other than the exceptions (electro combo, hagar join explode, ML mines)
-// 0: only damage from contents (lava/slime) or exceptions
-// 1: only self damage or damage from contents or exceptions
-// 2: allow all damage to projectiles normally
+set g_projectiles_damage -2 "\"-2\" = allow no damage to projectiles, \"-1\" = no damage other than the exceptions (electro combo, hagar join explode, ML mines), \"0\" = only damage from contents (lava/slime) or exceptions, \"1\" = only self damage or damage from contents or exceptions, \"2\" = allow all damage to projectiles"
 set g_projectiles_keep_owner 1
-set g_projectiles_newton_style 0
-// possible values:
-// 0: absolute velocity projectiles (like Quake)
-// 1: relative velocity projectiles, "Newtonian" (like Tribes 2)
-// 2: relative velocity projectiles, but aim is precorrected so projectiles hit the crosshair (note: strafe rockets then are SLOWER than ones shot while standing, happens in 1 too when aiming correctly which is hard)
+set g_projectiles_newton_style 0 "\"0\" = absolute velocity projectiles (like Quake), \"1\" = relative velocity projectiles, \"Newtonian\" (like Tribes 2), \"2\" = relative velocity projectiles, but aim is precorrected so projectiles hit the crosshair (NOTE: strafe rockets then are SLOWER than ones shot while standing, happens in 1 too when aiming correctly which is hard)"
 set g_projectiles_newton_style_2_minfactor 0.8
 set g_projectiles_newton_style_2_maxfactor 1.5
-set g_projectiles_spread_style 7
-// possible values:
-// 0: forward + solid sphere (like Quake) - varies velocity
-// 1: forward + flattened solid sphere
-// 2: forward + solid circle
-// 3: forward + normal distribution 3D - varies velocity
-// 4: forward + normal distribution on a plane
-// 5: forward + circle with 1-r falloff
-// 6: forward + circle with 1-r^2 falloff
-// 7: forward + circle with (1-r)(2-r) falloff
+set g_projectiles_spread_style 7 "\"0\" = forward + solid sphere (like Quake) - varies velocity, \"1\" = forward + flattened solid sphere, \"2\" = forward + solid circle, \"3\" = forward + normal distribution 3D - varies velocity, \"4\" = forward + normal distribution on a plane, \"5\" = forward + circle with 1-r falloff, \"6\" = forward + circle with 1-r^2 falloff, \"7\" = forward + circle with (1-r)(2-r) falloff"
 set g_balance_falldamage_deadminspeed 250
 set g_balance_falldamage_minspeed 900
 set g_balance_falldamage_factor 0.20
 set g_balance_falldamage_maxdamage 40
 set g_balance_falldamage_onlyvertical 0
 set g_balance_damagepush_speedfactor 2.5
-set g_balance_contents_damagerate 0.2 // ticrate interval for applying damage with playerdamage/projectiledamage
-set g_balance_contents_drowndelay 10 // time under water before a player begins drowning
-set g_balance_contents_playerdamage_drowning 20 // damage per second for while player is drowning
-set g_balance_contents_playerdamage_lava 50 // damage per second for while player is inside lava
-set g_balance_contents_playerdamage_lava_burn 0 // extra burning damage after leaving lava
-set g_balance_contents_playerdamage_lava_burn_time 2.5 // time across which the damage is applied (note: not dps!)
-set g_balance_contents_playerdamage_slime 30 // damage per second for while player is inside slime
-set g_balance_contents_projectiledamage 10000 // instantly kill projectiles upon touching lava/slime
+set g_balance_contents_damagerate 0.2 "ticrate interval for applying damage with playerdamage/projectiledamage cvars"
+set g_balance_contents_drowndelay 10 "time under water before a player begins drowning"
+set g_balance_contents_playerdamage_drowning 20 "damage per second for while player is drowning"
+set g_balance_contents_playerdamage_lava 50 "damage per second for while player is inside lava"
+set g_balance_contents_playerdamage_lava_burn 0 "extra burning damage after leaving lava"
+set g_balance_contents_playerdamage_lava_burn_time 2.5 "time across which the damage is applied (NOTE: not dps!)"
+set g_balance_contents_playerdamage_slime 30 "damage per second for while player is inside slime"
+set g_balance_contents_projectiledamage 10000 "damage taken by projectiles upon touching lava/slime (if enabled by g_projectiles_damage)"
 set g_maxpushtime 8.0 "timeout for kill credit when your damage knocks someone into a death trap"
 // }}}
 
