Move checkpoint splits from infomessages to their own HUD panel

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -32,6 +32,7 @@ seta hud_panel_timer            1 "enable this panel"
 seta hud_panel_radar            1 "enable this panel, \"2\" = also enable in non-teambased game modes"
 seta hud_panel_score            1 "enable this panel"
 seta hud_panel_racetimer        1 "enable this panel"
+seta hud_panel_checkpoints      1 "enable this panel"
 seta hud_panel_vote             1 "enable this panel"
 seta hud_panel_modicons         1 "enable this panel"
 seta hud_panel_pressedkeys      1 "enable this panel, \"1\" = show only when spectating other players, \"2\" = show always"
@@ -63,6 +64,7 @@ seta hud_panel_timer_dynamichud            1 "apply the dynamic HUD effects to t
 seta hud_panel_radar_dynamichud            1 "apply the dynamic HUD effects to this panel"
 seta hud_panel_score_dynamichud            1 "apply the dynamic HUD effects to this panel"
 seta hud_panel_racetimer_dynamichud        1 "apply the dynamic HUD effects to this panel"
+seta hud_panel_checkpoints_dynamichud      1 "apply the dynamic HUD effects to this panel"
 seta hud_panel_vote_dynamichud             1 "apply the dynamic HUD effects to this panel"
 seta hud_panel_modicons_dynamichud         1 "apply the dynamic HUD effects to this panel"
 seta hud_panel_pressedkeys_dynamichud      1 "apply the dynamic HUD effects to this panel"
