--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -177,6 +177,18 @@ seta hud_panel_racetimer_bg_alpha "" "if set to something else than \"\" = overr
 seta hud_panel_racetimer_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_racetimer_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
 
+seta hud_panel_checkpoints_pos "" "position of this base of the panel"
+seta hud_panel_checkpoints_size "" "size of this panel"
+seta hud_panel_checkpoints_bg "" "if set to something else than \"\" = override default background"
+seta hud_panel_checkpoints_bg_color "" "if set to something else than \"\" = override default panel background color"
+seta hud_panel_checkpoints_bg_color_team "" "override panel color with team color in team based games"
+seta hud_panel_checkpoints_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
+seta hud_panel_checkpoints_bg_border "" "if set to something else than \"\" = override default size of border around the background"
+seta hud_panel_checkpoints_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
+seta hud_panel_checkpoints_align "" "text alignment; \"0\" = left, \"0.5\" = center, \"1\" = right"
+seta hud_panel_checkpoints_flip "" "order the list top to bottom instead of bottom to top"
+seta hud_panel_checkpoints_fontscale "" "scale the text font by this amount"
+
 seta hud_panel_vote_pos "" "position of this base of the panel"
 seta hud_panel_vote_size "" "size of this panel"
 seta hud_panel_vote_alreadyvoted_alpha "" "alpha of the vote dialog after you have voted"
