--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -30,7 +30,7 @@ seta hud_progressbar_acceleration_neg_color "0.86 0.35 0"
 seta hud_progressbar_vehicles_ammo1_color "0.77 0.67 0"
 seta hud_progressbar_vehicles_ammo2_color "0.86 0.35 0"
 
-seta _hud_panelorder "17 25 15 12 9 5 10 6 14 0 7 4 11 2 1 3 8 13 16 18 23 19 20 21 22 24 25 26 "
+seta _hud_panelorder "17 25 15 12 9 5 10 6 14 0 7 4 11 2 1 3 8 13 16 18 23 19 20 21 22 24 25 26 27 "
 
 seta hud_configure_grid "1"
 seta hud_configure_grid_xsize "0.005000"
@@ -177,6 +177,18 @@ seta hud_panel_racetimer_bg_color_team ""
 seta hud_panel_racetimer_bg_alpha ""
 seta hud_panel_racetimer_bg_border ""
 seta hud_panel_racetimer_bg_padding ""
+
+seta hud_panel_checkpoints_pos "0.700000 0.190000"
+seta hud_panel_checkpoints_size "0.250000 0.170000"
+seta hud_panel_checkpoints_bg ""
+seta hud_panel_checkpoints_bg_color ""
+seta hud_panel_checkpoints_bg_color_team ""
+seta hud_panel_checkpoints_bg_alpha ""
+seta hud_panel_checkpoints_bg_border ""
+seta hud_panel_checkpoints_bg_padding ""
+seta hud_panel_checkpoints_flip "0"
+seta hud_panel_checkpoints_align "1"
+seta hud_panel_checkpoints_fontscale "1"
 
 seta hud_panel_vote_pos "0.740000 0.690000"
 seta hud_panel_vote_size "0.190000 0.090000"
