--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -473,8 +473,8 @@ seta cl_damagetext_velocity_screen "0 0 0" "damage text move direction (screen c
 seta cl_damagetext_velocity_world "0 0 20" "damage text move direction (world coordinates relative to player's view)"
 seta cl_damagetext_offset_screen "0 -45 0" "damage text offset (screen coordinates)"
 seta cl_damagetext_offset_world "0 25 0" "damage text offset (world coordinates relative to player's view)"
-seta cl_damagetext_accumulate_alpha_rel "0.65" "only update existing damage text when it's above this much percentage (0 to 1) of the starting alpha"
-seta cl_damagetext_accumulate_lifetime "-1" "only update existing damage text when it is younger than this many seconds, negative always updates"
+seta cl_damagetext_accumulate_alpha_rel "0.65" "don't update existing damage text when its alpha is below this fraction (0 to 1) of `cl_damagetext_alpha_start`, set this cvar to \"1\" to ignore this rule"
+seta cl_damagetext_accumulate_lifetime "-1" "don't update existing damage text if it is older than this many seconds, set this cvar to \"-1\" to ignore this rule"
 seta cl_damagetext_friendlyfire "1" "\"0\" = never show for friendly fire, \"1\" = when more than 0 damage, \"2\" = always"
 seta cl_damagetext_friendlyfire_color "1 0 0" "damage text color for friendlyfire"
 
