--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -99,9 +99,11 @@ seta hud_panel_healtharmor_hide_ondeath 0 "hide this panel when dead"
 seta hud_panel_timer_increment "0" "show elapsed time instead of remaining time"
 seta hud_panel_timer_secondary "1" "secondary timer; \"0\" = hide, \"1\" = show, \"2\" = show swapped"
 seta hud_panel_timer_unbound "0" "show seconds leading up to the start of the match"
-seta hud_panel_timer_warning_relative "0" "make hud_panel_timer_warning_red and hud_panel_timer_warning_yellow factors relative to a reference; \"1\" = timelimit, \"2\" = server record for current map (only works in CTS)"
-seta hud_panel_timer_warning_red "60" "how many seconds before match end to turn timer red, or factor to multiply reference if hud_panel_timer_warning_relative is set"
-seta hud_panel_timer_warning_yellow "300" "how many seconds before match end to turn timer yellow, or factor to multiply reference if hud_panel_timer_warning_relative is set"
+seta hud_panel_timer_warning_relative "0" "use hud_panel_timer_warning_relative_red and hud_panel_timer_warning_relative_yellow factors relative to a reference; \"0\" = use absolute values from hud_panel_timer_warning_red and hud_panel_timer_warning_yellow, \"1\" = reference is timelimit, \"2\" = reference is server record for current map (only works in CTS)"
+seta hud_panel_timer_warning_relative_red "1.2" "factor to multiply reference if hud_panel_timer_warning_relative is set, red warning"
+seta hud_panel_timer_warning_relative_yellow "3" "factor to multiply reference if hud_panel_timer_warning_relative is set, yellow warning"
+seta hud_panel_timer_warning_red "60" "how many seconds before match end to turn timer red"
+seta hud_panel_timer_warning_yellow "300" "how many seconds before match end to turn timer"
 
 seta hud_panel_engineinfo_framecounter_exponentialmovingaverage 1 "use an averaging method for calculating fps instead of counting frametime like engine does"
 seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_new_weight 0.1 "weight of latest data point"
