--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -105,7 +105,7 @@ seta hud_panel_timer_warning_relative "0" "use hud_panel_timer_warning_relative_
 seta hud_panel_timer_warning_relative_red "1.2" "factor to multiply reference if hud_panel_timer_warning_relative is set, red warning"
 seta hud_panel_timer_warning_relative_yellow "3" "factor to multiply reference if hud_panel_timer_warning_relative is set, yellow warning"
 seta hud_panel_timer_warning_red "60" "how many seconds before match end to turn timer red"
-seta hud_panel_timer_warning_yellow "300" "how many seconds before match end to turn timer"
+seta hud_panel_timer_warning_yellow "300" "how many seconds before match end to turn timer yellow"
 
 seta hud_panel_engineinfo_framecounter_exponentialmovingaverage 1 "use an averaging method for calculating fps instead of counting frametime like engine does"
 seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_new_weight 0.1 "weight of latest data point"
