Allow adding a delay to cl_deathscoreboard
Added new cvar cl_deathscoreboard_delay, with a default of 1.
Playtested using delay but the scoreboard instantly showing up seemed more natural, so I chose to keep instant as the default.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -552,6 +552,7 @@ set _nextmap "" "internal cvar, automatically synced with server's nextmap"
 
 // scoreboard
 seta scoreboard_columns default
+seta cl_deathscoreboard_delay 1 "delay in showing the death scoreboard; \"0\" = instant"
 
 // keep old scoreboard cvars for compatibility's sake
 // they've been replaced by hud_panel_scoreboard_* cvars
