phys: Allow crouching to have no impact on aircontrol
Crouching doesn't impact aircontrol (W-turning) in Q3DF CPM, but it does currently in physicsCPMA.cfg.
Changed code to allow for this, by creating sv_aircontrol_flags.
- Is a bitmask, 1 = backwards (replacing sv_aircontrol_backwards), 2 = sidewards (replacing sv_aircontrol_sidewards), 4 = crouching has no impact.
- Set it to 5 in physicsCPMA.cfg and bones physics.
- Remained as 0 in all other physics modes.
Also cleaned up and slightly optimized CPM_PM_Aircontrol.

--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -46,10 +46,9 @@ sv_airstrafeaccelerate 70  // from cpm1_dev_docs strafeaccelerate
 sv_maxairstrafespeed 30    // from cpm1_dev_docs wishspeed
 sv_airstrafeaccel_qw 0
 sv_aircontrol 150          // from cpm1_dev_docs
+sv_aircontrol_flags 5      // backwards (1) and crouching has no impact (4)
 sv_aircontrol_penalty 0
 sv_aircontrol_power 2
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 0
 sv_warsowbunny_turnaccel 0
 sv_warsowbunny_accel 0.1593
