--- a/physicsX.cfg
+++ b/physicsX.cfg
@@ -37,10 +37,9 @@ sv_airstrafeaccelerate 18
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.95
 sv_aircontrol 100
+sv_aircontrol_flags 0
 sv_aircontrol_penalty 0
 sv_aircontrol_power 2
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 900
 sv_warsowbunny_turnaccel 0
 sv_warsowbunny_accel 0.1593
