--- a/physicsXDFLight.cfg
+++ b/physicsXDFLight.cfg
@@ -28,10 +28,9 @@ sv_airstrafeaccelerate 14
 sv_maxairstrafespeed 150
 sv_airstrafeaccel_qw -0.987
 sv_aircontrol 100
+sv_aircontrol_flags 0
 sv_aircontrol_penalty 100
 sv_aircontrol_power 2.5
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 0
 sv_warsowbunny_turnaccel 0
 sv_warsowbunny_accel 0.1593
