--- a/physicsFruit.cfg
+++ b/physicsFruit.cfg
@@ -22,9 +22,8 @@ sv_airstrafeaccelerate 20
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.97
 sv_aircontrol 125
+sv_aircontrol_flags 0
 sv_aircontrol_power 2.5
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 0
 sv_warsowbunny_turnaccel 0
 sv_warsowbunny_accel 0.1593
