--- a/physicsNoQWBunny-nexbased.cfg
+++ b/physicsNoQWBunny-nexbased.cfg
@@ -31,10 +31,9 @@ sv_airstrafeaccelerate 24
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.9825
 sv_aircontrol 125
+sv_aircontrol_flags 0
 sv_aircontrol_penalty 100
 sv_aircontrol_power 2
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 0
 sv_warsowbunny_turnaccel 0
 sv_warsowbunny_accel 0.1593
