--- a/physicsWarsowDev.cfg
+++ b/physicsWarsowDev.cfg
@@ -22,10 +22,9 @@ sv_airstrafeaccelerate 70
 sv_maxairstrafespeed 30
 sv_airstrafeaccel_qw 0
 sv_aircontrol 0
+sv_aircontrol_flags 0
 sv_aircontrol_penalty 0
 sv_aircontrol_power 2
-sv_aircontrol_backwards 0
-sv_aircontrol_sidewards 0
 sv_airspeedlimit_nonqw 0
 sv_warsowbunny_turnaccel 6 // activates warsow movement mode
 sv_warsowbunny_accel 0.1585
