phys: Add sv_airstopaccelerate_full cvar
In Q3DF CPM players' acceleration is multiplied by 2.5 when aiming beyond 90 degrees, provided they're not A/D-strafing (side-strafing).
This didn't happen previously in Xonotic, and instead the multiplication would be sinusoidal, going from 1 to 2.5 over 90 to 180 degrees.
Adjusted code to allow for this by adding sv_airstopaccelerate_full, set it to true in only physicsCPMA.cfg.
Updated StrafeHUD to account for this.
- Previously it also applied sv_airstopaccelerate even when A/D-strafing (when it shouldn't).

--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -42,6 +42,7 @@ sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
 sv_airstopaccelerate 2.5   // from cpm1_dev_docs
+sv_airstopaccelerate_full 1
 sv_airstrafeaccelerate 70  // from cpm1_dev_docs strafeaccelerate
 sv_maxairstrafespeed 30    // from cpm1_dev_docs wishspeed
 sv_airstrafeaccel_qw 0
