--- a/physicsFruit.cfg
+++ b/physicsFruit.cfg
@@ -18,6 +18,7 @@ sv_airaccel_sideways_friction 0 // breaks strafing?
 sv_airaccel_qw 0.92
 sv_airaccel_qw_stretchfactor 0
 sv_airstopaccelerate 2.5
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 20
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.97
