--- a/physicsLeeStricklin-ModdedFruit.cfg
+++ b/physicsLeeStricklin-ModdedFruit.cfg
@@ -26,6 +26,7 @@ sv_airaccel_qw -0.8
 sv_airaccel_qw_stretchfactor 0
 
 sv_airstopaccelerate -0.95
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 24
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.97
