--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -21,6 +21,7 @@ sv_airaccel_qw -0.93 //given a negative value to combat potential cheats, was to
 sv_airaccel_qw_stretchfactor 0
 
 sv_airstopaccelerate 0
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 0
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
