--- a/physicsQ.cfg
+++ b/physicsQ.cfg
@@ -19,6 +19,7 @@ sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
 sv_airstopaccelerate 0
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 0
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
