--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -21,6 +21,7 @@ sv_airaccel_qw_stretchfactor 0
 // Q3A doesn't have airstopaccelerate and strafeaccelerate
 // but they're added in cpm1_dev_docs.zip with values 1 and 1 in VQ3 mode
 sv_airstopaccelerate 1
+sv_airstopaccelerate_full 1
 sv_airstrafeaccelerate 1
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
