--- a/physics.cfg
+++ b/physics.cfg
@@ -38,6 +38,7 @@ set g_physics_xonotic_accelerate 15
 set g_physics_xonotic_stopspeed 100
 set g_physics_xonotic_airaccelerate 2
 set g_physics_xonotic_airstopaccelerate 3
+set g_physics_xonotic_airstopaccelerate_full 0
 set g_physics_xonotic_track_canjump 0
 
 // ========
@@ -68,6 +69,7 @@ set g_physics_nexuiz_accelerate 8
 set g_physics_nexuiz_stopspeed 100
 set g_physics_nexuiz_airaccelerate 5.5
 set g_physics_nexuiz_airstopaccelerate 0
+set g_physics_nexuiz_airstopaccelerate_full 0
 set g_physics_nexuiz_track_canjump 0
 
 // =======
@@ -98,6 +100,7 @@ set g_physics_quake_accelerate 10
 set g_physics_quake_stopspeed 100
 set g_physics_quake_airaccelerate 106.66666666666666666666
 set g_physics_quake_airstopaccelerate 0
+set g_physics_quake_airstopaccelerate_full 0
 set g_physics_quake_track_canjump 1
 
 // ========
@@ -128,6 +131,7 @@ set g_physics_warsow_accelerate 15
 set g_physics_warsow_stopspeed 100
 set g_physics_warsow_airaccelerate 1
 set g_physics_warsow_airstopaccelerate 2.5
+set g_physics_warsow_airstopaccelerate_full 0
 set g_physics_warsow_track_canjump 0
 
 // ========
@@ -158,6 +162,7 @@ set g_physics_defrag_accelerate 15
 set g_physics_defrag_stopspeed 100
 set g_physics_defrag_airaccelerate 1
 set g_physics_defrag_airstopaccelerate 2.5
+set g_physics_defrag_airstopaccelerate_full 0
 set g_physics_defrag_track_canjump 0
 
 // =========
@@ -188,6 +193,7 @@ set g_physics_quake3_accelerate 10
 set g_physics_quake3_stopspeed 100
 set g_physics_quake3_airaccelerate 1
 set g_physics_quake3_airstopaccelerate 0
+set g_physics_quake3_airstopaccelerate_full 0
 set g_physics_quake3_track_canjump 1
 
 // ========
@@ -218,6 +224,7 @@ set g_physics_vecxis_accelerate 5.5
 set g_physics_vecxis_stopspeed 100
 set g_physics_vecxis_airaccelerate 5.5
 set g_physics_vecxis_airstopaccelerate 0
+set g_physics_vecxis_airstopaccelerate_full 0
 set g_physics_vecxis_track_canjump 0
 
 // =========
@@ -248,6 +255,7 @@ set g_physics_quake2_accelerate 10
 set g_physics_quake2_stopspeed 100
 set g_physics_quake2_airaccelerate 1
 set g_physics_quake2_airstopaccelerate 0
+set g_physics_quake2_airstopaccelerate_full 0
 set g_physics_quake2_track_canjump 1
 
 // =======
@@ -278,6 +286,7 @@ set g_physics_bones_accelerate 15
 set g_physics_bones_stopspeed 100
 set g_physics_bones_airaccelerate 1
 set g_physics_bones_airstopaccelerate 2.5
+set g_physics_bones_airstopaccelerate_full 1
 set g_physics_bones_track_canjump 0
 
 // ==========
@@ -308,4 +317,5 @@ set g_physics_overkill_accelerate 15
 set g_physics_overkill_stopspeed 100
 set g_physics_overkill_airaccelerate 2
 set g_physics_overkill_airstopaccelerate 3
+set g_physics_overkill_airstopaccelerate_full 0
 set g_physics_overkill_track_canjump 0
