--- a/physicsNoQWBunny-nexbased.cfg
+++ b/physicsNoQWBunny-nexbased.cfg
@@ -27,6 +27,7 @@ sv_airaccel_qw -0.9475
 sv_airaccel_qw_stretchfactor 0
 
 sv_airstopaccelerate 3
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 24
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.9825
