--- a/physicsSamual.cfg
+++ b/physicsSamual.cfg
@@ -18,6 +18,7 @@ sv_airaccel_sideways_friction 0.3
 sv_airaccel_qw 0.93
 sv_airaccel_qw_stretchfactor 0
 sv_airstopaccelerate 0
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 0
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
