--- a/physicsWarsowDev.cfg
+++ b/physicsWarsowDev.cfg
@@ -18,6 +18,7 @@ sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
 sv_airstopaccelerate 2
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 70
 sv_maxairstrafespeed 30
 sv_airstrafeaccel_qw 0
