--- a/physicsX.cfg
+++ b/physicsX.cfg
@@ -33,6 +33,7 @@ sv_airaccel_qw -0.8
 sv_airaccel_qw_stretchfactor 2
 
 sv_airstopaccelerate 3
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 18
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.95
