--- a/physicsX07.cfg
+++ b/physicsX07.cfg
@@ -32,6 +32,7 @@ sv_airaccel_qw -0.8
 sv_airaccel_qw_stretchfactor 2
 
 sv_airstopaccelerate 3
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 24
 sv_maxairstrafespeed 100
 sv_airstrafeaccel_qw -0.95
