--- a/physicsXDF.cfg
+++ b/physicsXDF.cfg
@@ -24,6 +24,7 @@ sv_airaccel_qw 0.95
 sv_airaccel_qw_stretchfactor 0
 // CPMA: 1
 sv_airstopaccelerate 2.5
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 70
 sv_maxairstrafespeed 30
 sv_airstrafeaccel_qw 1
