--- a/physicsXDFLight.cfg
+++ b/physicsXDFLight.cfg
@@ -24,6 +24,7 @@ sv_airaccel_qw -0.9146875
 sv_airaccel_qw_stretchfactor 0
 // CPMA: 1
 sv_airstopaccelerate 6.5625 // matches strafe-stopping speed
+sv_airstopaccelerate_full 0
 sv_airstrafeaccelerate 14
 sv_maxairstrafespeed 150
 sv_airstrafeaccel_qw -0.987
