--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -76,6 +76,7 @@ set sv_friction_slick 0.5 "movement friction while on slick surfaces"
 
 set sv_slick_applygravity 0 "apply a downward force while on slick surfaces to simulate slippery slopes"
 
+set sv_airstopaccelerate_full 0 "how much of sv_airstopaccelerate the player receives depending on how far they're aiming backwards; \"0\" = sinusoidal from sv_airaccelerate to sv_airstopaccelerate, \"1\" = full sv_airstopaccelerate regardless of angle"
 set sv_aircontrol_flags 0 "add option numbers together to enable more than one; \"1\" = apply forward aircontrol options to backward movement, \"2\" = apply forward aircontrol options to sideward movement, \"4\" = make crouching have no impact on aircontrol"
 
 set sv_player_viewoffset "0 0 35" "view offset of the player model"
