phys: Add sv_slickaccelerate cvar
This allows choosing the acceleration to use while on slick, rather than always defaulting to ground acceleration.
This is important for physicsQ3.cfg, where slick should be using the equivalent of air acceleration, not ground acceleration.
Also made the physics HUD not use hud_panel_physics_acceleration_max_slick if sv_slickaccelerate is less than sv_accelerate (like in Q3).

--- a/physics.cfg
+++ b/physics.cfg
@@ -39,6 +39,7 @@ set g_physics_xonotic_stopspeed 100
 set g_physics_xonotic_airaccelerate 2
 set g_physics_xonotic_airstopaccelerate 3
 set g_physics_xonotic_airstopaccelerate_full 0
+set g_physics_xonotic_slickaccelerate 15
 set g_physics_xonotic_track_canjump 0
 
 // ========
@@ -70,6 +71,7 @@ set g_physics_nexuiz_stopspeed 100
 set g_physics_nexuiz_airaccelerate 5.5
 set g_physics_nexuiz_airstopaccelerate 0
 set g_physics_nexuiz_airstopaccelerate_full 0
+set g_physics_nexuiz_slickaccelerate 8
 set g_physics_nexuiz_track_canjump 0
 
 // =======
@@ -101,6 +103,7 @@ set g_physics_quake_stopspeed 100
 set g_physics_quake_airaccelerate 106.66666666666666666666
 set g_physics_quake_airstopaccelerate 0
 set g_physics_quake_airstopaccelerate_full 0
+set g_physics_quake_slickaccelerate 10
 set g_physics_quake_track_canjump 1
 
 // ========
@@ -132,6 +135,7 @@ set g_physics_warsow_stopspeed 100
 set g_physics_warsow_airaccelerate 1
 set g_physics_warsow_airstopaccelerate 2.5
 set g_physics_warsow_airstopaccelerate_full 0
+set g_physics_warsow_slickaccelerate 15
 set g_physics_warsow_track_canjump 0
 
 // ========
@@ -163,6 +167,7 @@ set g_physics_defrag_stopspeed 100
 set g_physics_defrag_airaccelerate 1
 set g_physics_defrag_airstopaccelerate 2.5
 set g_physics_defrag_airstopaccelerate_full 0
+set g_physics_defrag_slickaccelerate 15
 set g_physics_defrag_track_canjump 0
 
 // =========
@@ -194,6 +199,7 @@ set g_physics_quake3_stopspeed 100
 set g_physics_quake3_airaccelerate 1
 set g_physics_quake3_airstopaccelerate 0
 set g_physics_quake3_airstopaccelerate_full 0
+set g_physics_quake3_slickaccelerate 1
 set g_physics_quake3_track_canjump 1
 
 // ========
@@ -225,6 +231,7 @@ set g_physics_vecxis_stopspeed 100
 set g_physics_vecxis_airaccelerate 5.5
 set g_physics_vecxis_airstopaccelerate 0
 set g_physics_vecxis_airstopaccelerate_full 0
+set g_physics_vecxis_slickaccelerate 5.5
 set g_physics_vecxis_track_canjump 0
 
 // =========
@@ -256,6 +263,7 @@ set g_physics_quake2_stopspeed 100
 set g_physics_quake2_airaccelerate 1
 set g_physics_quake2_airstopaccelerate 0
 set g_physics_quake2_airstopaccelerate_full 0
+set g_physics_quake2_slickaccelerate 10
 set g_physics_quake2_track_canjump 1
 
 // =======
@@ -287,6 +295,7 @@ set g_physics_bones_stopspeed 100
 set g_physics_bones_airaccelerate 1
 set g_physics_bones_airstopaccelerate 2.5
 set g_physics_bones_airstopaccelerate_full 1
+set g_physics_bones_slickaccelerate 15
 set g_physics_bones_track_canjump 0
 
 // ==========
@@ -318,4 +327,5 @@ set g_physics_overkill_stopspeed 100
 set g_physics_overkill_airaccelerate 2
 set g_physics_overkill_airstopaccelerate 3
 set g_physics_overkill_airstopaccelerate_full 0
+set g_physics_overkill_slickaccelerate 15
 set g_physics_overkill_track_canjump 0
