--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -29,6 +29,7 @@ sv_maxairspeed 320
 sv_stopspeed 100
 sv_accelerate 15 // from cpm1_dev_docs
 sv_airaccelerate 1
+sv_slickaccelerate 15
 // The cpm1_dev_docs.zip (only CPMA source code release) used friction 8,
 // but friction is 6 in all ~modern CPMA releases, and in DeFRaG CPM.
 sv_friction 6
