--- a/physicsLeeStricklin.cfg
+++ b/physicsLeeStricklin.cfg
@@ -8,6 +8,7 @@ sv_maxairspeed 424
 sv_stopspeed 100
 sv_accelerate 13
 sv_airaccelerate 2
+sv_slickaccelerate 13
 sv_friction 8
 edgefriction 1
 sv_stepheight 26
