--- a/physicsLzd.cfg
+++ b/physicsLzd.cfg
@@ -8,6 +8,7 @@ sv_maxairspeed 300
 sv_stopspeed 40
 sv_accelerate 15
 sv_airaccelerate 9
+sv_slickaccelerate 15
 sv_friction 5
 edgefriction 1
 sv_stepheight 34
