--- a/physicsNexuiz11.cfg
+++ b/physicsNexuiz11.cfg
@@ -7,6 +7,7 @@ sv_maxairspeed 50
 sv_stopspeed 100
 sv_accelerate 5.5
 sv_airaccelerate 5.5
+sv_slickaccelerate 5.5
 sv_friction 5
 edgefriction 1
 sv_stepheight 34
