--- a/physicsQ2.cfg
+++ b/physicsQ2.cfg
@@ -7,6 +7,7 @@ sv_maxairspeed 300
 sv_stopspeed 100
 sv_accelerate 10
 sv_airaccelerate 1
+sv_slickaccelerate 10
 sv_friction 6
 edgefriction 1
 sv_stepheight 18
