--- a/physicsX.cfg
+++ b/physicsX.cfg
@@ -8,6 +8,7 @@ sv_maxairspeed 360
 sv_stopspeed 100
 sv_accelerate 15
 sv_airaccelerate 2
+sv_slickaccelerate 15
 sv_friction 6
 edgefriction 1
 sv_stepheight 31
