--- a/physicsFruit.cfg
+++ b/physicsFruit.cfg
@@ -7,6 +7,7 @@ sv_maxairspeed 320
 sv_stopspeed 100
 sv_accelerate 15
 sv_airaccelerate 1
+sv_slickaccelerate 15
 sv_friction 8
 edgefriction 1
 sv_stepheight 34
