--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -9,6 +9,7 @@ sv_maxairspeed 283
 sv_stopspeed 100
 sv_accelerate 13
 sv_airaccelerate 6
+sv_slickaccelerate 13
 sv_friction 9.6 // higher values make you slide less
 edgefriction 1 // div0 says no! lol
 sv_stepheight 26
