--- a/physicsNexuiz26.cfg
+++ b/physicsNexuiz26.cfg
@@ -7,6 +7,7 @@ sv_maxairspeed 220
 sv_stopspeed 100
 sv_accelerate 8
 sv_airaccelerate 5.5
+sv_slickaccelerate 8
 sv_friction 7
 edgefriction 1
 sv_stepheight 34
