--- a/physicsNoQWBunny-nexbased.cfg
+++ b/physicsNoQWBunny-nexbased.cfg
@@ -9,6 +9,7 @@ sv_maxairspeed 400
 sv_stopspeed 100
 sv_accelerate 15
 sv_airaccelerate 2
+sv_slickaccelerate 15
 sv_friction 8
 edgefriction 1
 sv_stepheight 26
