--- a/physicsQ.cfg
+++ b/physicsQ.cfg
@@ -8,6 +8,7 @@ sv_stopspeed 100
 sv_accelerate 10
 sv_airaccelerate 106.66666666666666666666
 // it is 10 in Quake 1, but the Xonotic player physics code does not 100% match an oddity of Quake 1, but matches Quake 2 and 3 more
+sv_slickaccelerate 10
 sv_friction 4
 edgefriction 1
 sv_stepheight 18
