--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -8,6 +8,7 @@ sv_maxairspeed 320
 sv_stopspeed 100
 sv_accelerate 10
 sv_airaccelerate 1
+sv_slickaccelerate 1
 sv_friction 6
 edgefriction 1
 sv_stepheight 18
