--- a/physicsSamual.cfg
+++ b/physicsSamual.cfg
@@ -7,6 +7,7 @@ sv_maxairspeed 235
 sv_stopspeed 200
 sv_accelerate 6
 sv_airaccelerate 6
+sv_slickaccelerate 6
 sv_friction 4
 edgefriction 1
 sv_stepheight 34
