--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -75,6 +75,7 @@ set sv_friction_on_land 0 "movement friction applied for half a second upon land
 set sv_friction_slick 0.5 "movement friction while on slick surfaces"
 
 set sv_slick_applygravity 0 "apply a downward force while on slick surfaces to simulate slippery slopes"
+set sv_slickaccelerate 0 "rate at which a player accelerates while on slick surfaces"
 
 set sv_airstopaccelerate_full 0 "how much of sv_airstopaccelerate the player receives depending on how far they're aiming backwards; \"0\" = sinusoidal from sv_airaccelerate to sv_airstopaccelerate, \"1\" = full sv_airstopaccelerate regardless of angle"
 set sv_aircontrol_flags 0 "add option numbers together to enable more than one; \"1\" = apply forward aircontrol options to backward movement, \"2\" = apply forward aircontrol options to sideward movement, \"4\" = make crouching have no impact on aircontrol"
