--- a/commands.cfg
+++ b/commands.cfg
@@ -257,6 +257,7 @@ alias radarmap             "qc_cmd_sv     radarmap             ${* ?}" // Genera
 alias reducematchtime      "qc_cmd_sv     reducematchtime      ${* ?}" // Decrease the timelimit value incrementally
 alias resetmatch           "qc_cmd_sv     resetmatch           ${* ?}" // Soft restart the map
 alias setbots              "qc_cmd_sv     setbots              ${* ?}" // Adjust how many bots are in the match
+alias rebalanceplayer      "qc_cmd_sv     rebalanceplayer      ${* ?}" // Swap the given player with the worst player of the other team
 alias shuffleteams         "qc_cmd_sv     shuffleteams         ${* ?}" // Randomly move players to different teams
 alias stuffto              "qc_cmd_sv     stuffto              ${* ?}" // Send a command to be executed on a client
 alias trace                "qc_cmd_sv     trace                ${* ?}" // Various debugging tools with tracing
@@ -380,7 +381,7 @@ set sv_vote_command_help_gotomap "\nUsage:^3 vcall gotomap mapname\n^7  Where 'm
 // =================================
 set sv_vote_call 1 "allow users to call a vote for the commands in sv_vote_commands"
 set sv_vote_change 1 "allow voters to change their mind after already voting"
-set sv_vote_commands "restart fraglimit gotomap nextmap endmatch reducematchtime extendmatchtime allready resetmatch kick cointoss movetoauto shuffleteams bots nobots" "these commands can be voted by players or used directly by masters (vdo) in addition to sv_vote_master_commands"
+set sv_vote_commands "restart fraglimit gotomap nextmap endmatch reducematchtime extendmatchtime allready resetmatch kick cointoss movetoauto rebalanceplayer shuffleteams bots nobots" "these commands can be voted by players or used directly by masters (vdo) in addition to sv_vote_master_commands"
 set sv_vote_only_commands ""
 set sv_vote_limit 160 "maximum allowed length of a vote command"
 set sv_vote_master_commands "movetored movetoblue movetoyellow movetopink movetospec" "extra commands which vote masters can execute by themselves, along with the normal sv_vote_commands" // maybe add kickban here (but then sv_vote_master 0)
