--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -589,6 +589,8 @@ sv_cullentities_trace_eyejitter 0
 // less "lagging" of other players, but also less PL tolerant... let's try this
 sv_clmovement_inputtimeout 0.06249 // slightly less than 2 32hz frames, so only one frame can be compensated
 
+set g_maxping 350 "clients with a ping above this limit can't join the game (rechecked each time they try to join), 0 disables this limit"
+
 // strength sound settings
 set sv_strengthsound_antispam_time 0.1 "minimum distance of Strength sounds"
 set sv_strengthsound_antispam_refire_threshold 0.04 "apply minimum distance only if refire of the gun is smaller than this"
