--- a/notifications.cfg
+++ b/notifications.cfg
@@ -493,6 +493,7 @@ seta notification_CENTER_JOIN_PLAY_TEAM_QUEUECONFLICT "1" "\"0\" = off, \"1\" = 
 seta notification_CENTER_JOIN_PLAY_TEAM "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_JOIN_PREVENT "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_JOIN_PREVENT_MINIGAME "1" "\"0\" = off, \"1\" = centerprint"
+seta notification_CENTER_JOIN_PREVENT_PING "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_JOIN_PREVENT_QUEUE "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_JOIN_PREVENT_QUEUE_TEAM_CONFLICT "1" "\"0\" = off, \"1\" = centerprint"
 seta notification_CENTER_JOIN_PREVENT_QUEUE_TEAM "1" "\"0\" = off, \"1\" = centerprint"
