Apply balance vote 29: g_projectiles_interact 1; g_balance_devastator_damageforcescale 0
https://xonotic.org/balancevotes/29/

--- a/balance-xonotic.cfg
+++ b/balance-xonotic.cfg
@@ -205,7 +205,7 @@ set g_balance_firetransfer_damage 0.8
 set g_throughfloor_damage 0.75
 set g_throughfloor_force 0.75
 set g_projectiles_damage -2 "\"-2\" = allow no damage to projectiles, \"-1\" = no damage other than the exceptions (electro combo, hagar join explode, ML mines), \"0\" = only damage from contents (lava/slime) or exceptions, \"1\" = only self damage or damage from contents or exceptions, \"2\" = allow all damage to projectiles"
-set g_projectiles_interact 2 "\"0\" = projectiles don't interact with each other (noclip through), \"1\" = projectiles don't interact except that blaster bolts detonate when hitting another projectile (deflect it), \"2\" = normal projectiles detonate and bouncy projectiles bounce off when hitting another projectile"
+set g_projectiles_interact 1 "\"0\" = projectiles don't interact with each other (noclip through), \"1\" = projectiles don't interact except that blaster bolts detonate when hitting another projectile (deflecting it), \"2\" = normal projectiles detonate and bouncy projectiles bounce off when hitting another projectile"
 set g_projectiles_keep_owner 1
 set g_projectiles_newton_style 0 "\"0\" = absolute velocity projectiles (like Quake), \"1\" = relative velocity projectiles, \"Newtonian\" (like Tribes 2), \"2\" = relative velocity projectiles, but aim is precorrected so projectiles hit the crosshair (NOTE: strafe rockets then are SLOWER than ones shot while standing, happens in 1 too when aiming correctly which is hard)"
 set g_projectiles_newton_style_2_minfactor 0.8
