Make menu Slider animations smooth
Previously the smooth quadratic animation was used only for when the slider was dragged out of range, which didn't work properly since if you dragged it back into the range before the animation was complete then it would bug out.
Made Sliders always use the smooth quadratic animation, except in cases like for loadCvars.
Added cvar menu_animations to control how long the animations last, added a slider for this in Settings > Misc.
Didn't do the same for ListBoxes yet.
Cleaned up qcsrc/menu/anim/ code a tiny bit.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -501,6 +501,7 @@ exec binds-xonotic.cfg
 
 seta menu_skin "luma"
 set menu_slowmo 1
+seta menu_animations 0.2 "how long animations last in the menu; \"0\" = disable animations"
 seta menu_sounds 0 "enables menu sound effects; \"1\" = enable click sounds, \"2\" = also enable hover sounds"
 seta menu_tooltips 1 "menu tooltips; \"0\" = disabled, \"1\" = enabled, \"2\" = also show cvar or console command (when available) changed or executed by the item"
 set menu_picmip_bypass 0 "bypass texture quality enforcement based on system resources (WARNING: not recommended and may cause crashes!)"
