Allow displaying who used suggestmap
When hovering over a map in the map voting screen, if g_maplist_votable_show_suggester (new cvar) is 1, it'll now display "Suggested by: username".
When voting finishes, if a map that was suggested wins, the text will properly relocate itself.
Made the mapvoting HUD 5% thinner (not in gametype voting) so that the suggester text doesn't cause a 3x3 grid of maps (9) to display differently when abstaining is enabled and the chat takes the full 20% vid_conheight.
Also abstain text now fades out when voting finishes, like map pics and names.
Also removed some useless variables.
Fixed g_maplist_votable_suggestions cvar description, so it reflects the behavior of the code.
Also properly centered abstain (and suggester name) text.
Improved documentation of the code.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -367,10 +367,11 @@ set g_maplist_votable 6 "number of maps that are shown in the map voting at the 
 set g_maplist_votable_reduce_time 15 "reduce the number of options shown after this amount of time, during map vote screen; \"0\" = disable this feature"
 set g_maplist_votable_reduce_count 2 "number of options shown after being reduced, during the map vote screen; if < 2, keep all maps that received any votes, if at least 2 did"
 set g_maplist_votable_timeout 30 "timeout for the map voting; must be below 50 seconds!"
-set g_maplist_votable_suggestions 2 "number of maps a player is allowed to suggest for the map voting screen using 'suggestmap'"
+set g_maplist_votable_suggestions 2 "number of maps chosen in total from the maps the players suggest for the map voting screen using 'suggestmap'"
 set g_maplist_votable_suggestions_override_mostrecent 0 "allow players to suggest maps that have been played recently"
 set g_maplist_votable_detail 1 "\"0\" = hide per-map vote counts (to avoid influential first votes), \"1\" = show the counts, \"2\" = also show which map will win in the event of a tie"
 set g_maplist_votable_abstain 0 "offer a 'don't care' option on the voting screen"
+set g_maplist_votable_show_suggester 1 "show which player suggested a map with 'suggestmap' when hovering"
 set g_maplist_votable_screenshot_dir "maps levelshots"	"where to look for map screenshots"
 
 set sv_vote_gametype 0 "show a vote screen for gametypes before map vote screen"
