Display a muted icon next to ignored player names in the scoreboard
The ignore system now saves permanent ignores (the ones saved to server db as XonStat UIDs)
to player.ignore_list too but as simple server IDs so that the full list can be sent to the client

Muted icon made by me from scratch using Inkscape

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -971,3 +971,5 @@ set menu_reverted_nonsaved_cvars "" "These cvars are currently marked as saved i
 
 // Avoid perf problems near '0 0 0'; `set` without a description is because only current DP has this engine cvar
 set cl_areagrid_link_SOLID_NOT 0
+
+set _cl_ignore_list ""
