Make mines explode earlier the closer the enemy is
Buffed the Mine Layer by making mines explode sooner if the enemy gets closer to it.
- At the edge of the radius the mine will still detonate after 0.5s by default (cvar renamed g_balance_minelayer_time -> g_balance_minelayer_time_edge).
- At the center of the radius (directly on the mine), the mine will detonate after 0.25s by default (new cvar g_balance_minelayer_time_center).
- When between the edge and center, the detonation time is scaled between these values.
- New detonation time is calculated in the think function, if the new detonation time is greater than the current detonation time then it isn't overridden (or else fast players could walk over the center then continue going, and the detonation time would increase
Since this change buffed them in combat, decreased g_balance_minelayer_speed from 1000 to 800.
Increased the mine lifetime from 10s to 20s by default.
Allowed mines to explode earlier if triggered by proximity, while on their lifetime countdown.
- Previously if their lifetime countdown started, they wouldn't explode any earlier if a player walked directly over them, even if g_balance_minelayer_time was 0 (or more generally less than g_balance_minelayer_lifetime_countdown).
Also made mines be triggered by players through warpzones.

--- a/bal-wep-nexuiz25.cfg
+++ b/bal-wep-nexuiz25.cfg
@@ -63,8 +63,11 @@ set g_balance_mortar_switchdelay_drop 0.15
 set g_balance_mortar_switchdelay_raise 0.15
 // }}}
 // {{{ #5: Mine Layer (MUTATOR WEAPON)
+set g_balance_minelayer_lifetime 10
+set g_balance_minelayer_speed 1000
 set g_balance_minelayer_switchdelay_drop 0.15
 set g_balance_minelayer_switchdelay_raise 0.15
+set g_balance_minelayer_time_center 0.5
 // }}}
 // {{{ #6: Electro
 set g_balance_electro_combo_comboradius 0
