teamplay: use xonstat skill ratings in team auto-selection
Behaves differently in warmup (see comments) to prevent a problem that
often occurs when always selecting the weakest team, taking advantage of
sv_teamnagger blocking the match from starting.

Thanks k9 for suggestions and code fixes to use z-scores and
inverse-variance weighting.

Also fixes team scores being compared in warmup and having too much
influence when it's too early for them to be reliable.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -293,6 +293,8 @@ set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger
 set g_balance_teams_queue 0 "queue players to maintain balance when they join during the match, any bots should be added with minplayers_per_team instead of bot_number so humans can replace them instead of waiting in queue while a bot plays"
 set g_balance_teams_remove 0 "remove excess players from teams to maintain balance when someone leaves (currently does nothing in matches with more than 2 teams)"
 set g_balance_teams_remove_wait 10 "seconds to warn everyone before removing an excess player; \"0\" = immediately"
+set g_balance_teams_skill_unranked_factor 0.666 "clients lacking a skill rating are considered to have the average of all client skills multiplied by this value, set it smaller if clients without a skill rating are usually novices, larger if they're usually experts"
+set g_balance_teams_skill_significance_threshold 1.645 "differences between team and player skill ratings are considered statistically significant when they exceed this many standard deviations"
 
 set sv_teamnagger 2 "enable a nag message when the teams are unbalanced, value sets team size difference threshold, \"1\" is recommended when g_balance_teams_queue is enabled, g_warmup won't end while the message is visible"
 
