menu: Re-make Mutator dialog
Rewrote the Mutator dialog from scratch.
Included many more mutators than before.
It's now possible to view and change mutator-specific options, like g_instagib_blaster_keepdamage.
As with before, some things included aren't necessarily "mutators", but mutate the gameplay so are listed here anyway.
Some mutators are grouped together, like Offhand Blaster & Hook.
The conditions for mutators being enabled (actually, not just enabled in the menu) could do with some improvement in future.
Also made build_mutator_list, mut_is_active, and mut_set_active defined only in CSQC, as these were never used in MENUQC.
Cleaned up build_mutator_list, made all words in mutator strings start with a capital letter for consistency.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -511,7 +511,8 @@ seta menu_create_show_all 0 "show most gametypes in the create menu"
 
 set menu_no_music_nor_welcome 0 "don't play the menu music and skip the welcome announcer"
 
-seta menu_weaponarena ""
+seta menu_weaponarena "none"
+seta menu_weaponstartoverride -1
 
 seta menu_maxplayers 16 "maxplayers value when the menu starts a game"
 
