Ammo panel: show only usable ammo types in Weapon Arenas

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -918,6 +918,8 @@ scr_loadingscreen_scale 999
 scr_loadingscreen_scale_base 1
 scr_loadingscreen_scale_limit 2
 
+set _cl_weaponarena_weapons "-1 0 0" "internal cvar automatically set by the server storing available weapons in Weapon Arena"
+
 // in-game menu
 seta menu_gamemenu 1 "\"1\" = show in-game menu when ESC is pressed, \"0\" = show main menu when ESC is pressed"
 
