scoreboard: add sv_showskill cvar
Like sv_showfps but for skill rating visibility, may help with team
balancing.

Changes the hash because by default `skill` is removed from the stats
output line:
:labels:player:score!!,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,kills,deaths<,,suicides<,dmg,dmgtaken<,,skill,,,,,,,,,

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -686,6 +686,7 @@ set sv_show_entnum 0 "show the number and some info of the entity you're aiming 
 
 set sv_showfps 0 "show players' FPS counters in the scoreboard. this setting acts as a delay in seconds between updates (NOTE: this gathers performance telemetry, it may require consent from players on the server depending on your legislation)"
 set sv_doors_always_open 0 "don't close doors after a player opens them"
+set sv_showskill 0 "show players' XonStat skill ratings (Weng-Lin) in the scoreboard, \"1\" = in all supported gametypes, \"2\" = only in team gametypes"
 
 set sv_warpzone_allow_selftarget 0 "do not touch"
 
